// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compiler: transition > basic 1`] = `
"import { VaporTransition as _VaporTransition, applyVShow as _applyVShow, createComponent as _createComponent, template as _template } from 'vue';
const t0 = _template("<h1>foo", 1)

export function render(_ctx) {
  const n1 = _createComponent(_VaporTransition, { persisted: "" }, () => {
    const n0 = t0()
    _applyVShow(n0, () => (_ctx.show))
    return n0
  }, true)
  return n1
}"
`;

exports[`compiler: transition > inject persisted when child has v-show 1`] = `
"import { VaporTransition as _VaporTransition, applyVShow as _applyVShow, createComponent as _createComponent, template as _template } from 'vue';
const t0 = _template("<div>", 1)

export function render(_ctx) {
  const n1 = _createComponent(_VaporTransition, { persisted: "" }, () => {
    const n0 = t0()
    _applyVShow(n0, () => (_ctx.ok))
    return n0
  }, true)
  return n1
}"
`;

exports[`compiler: transition > should drop comment children to match vdom runtime and SSR behavior 1`] = `
"import { VaporTransition as _VaporTransition, createComponent as _createComponent, template as _template } from 'vue';
const t0 = _template("<div>foo", 3)

export function render(_ctx) {
  const n2 = _createComponent(_VaporTransition, null, () => {
    const n1 = t0()
    return n1
  }, true)
  return n2
}"
`;

exports[`compiler: transition > should drop comment children to match vdom runtime and SSR behavior 2`] = `
"import { VaporTransitionGroup as _VaporTransitionGroup, setBlockKey as _setBlockKey, createComponent as _createComponent, template as _template } from 'vue';
const t0 = _template("<li>a</li>")
const t1 = _template("<li>b")

export function render(_ctx) {
  const n3 = _createComponent(_VaporTransitionGroup, { tag: "ul" }, () => {
    const n1 = t0()
    const n2 = t1()
    _setBlockKey(n1, "a")
    _setBlockKey(n2, "b")
    return [n1, n2]
  }, true)
  return n3
}"
`;

exports[`compiler: transition > the v-if/else-if/else branches in Transition should ignore comments 1`] = `
"import { VaporTransition as _VaporTransition, setInsertionState as _setInsertionState, createIf as _createIf, extend as _extend, createComponent as _createComponent, template as _template } from 'vue';
const t0 = _template("<div>hey", 3)
const t1 = _template("<p>", 2)
const t2 = _template("<!-- this should not be ignored -->", 2)
const t3 = _template("<div>", 1)

export function render(_ctx) {
  const n17 = _createComponent(_VaporTransition, null, _extend(() => {
    const n0 = _createIf(() => (_ctx.a), () => {
      const n2 = t0()
      return n2
    }, () => _createIf(() => (_ctx.b), () => {
      const n5 = t0()
      return n5
    }, () => {
      const n15 = t3()
      _setInsertionState(n15)
      const n9 = _createIf(() => (_ctx.c), () => {
        const n11 = t1()
        return n11
      }, () => {
        const n13 = t2()
        const n14 = t1()
        return [n13, n14]
      }, 777 /* TRUE_SINGLE_ROOT, FALSE_MULTI_ROOT, KEYED_INDEX_2 */)
      return n15
    }, 645 /* TRUE_SINGLE_ROOT, FALSE_SINGLE_ROOT, SLOT_ROOT, KEYED_INDEX_1 */), 389 /* TRUE_SINGLE_ROOT, FALSE_SINGLE_ROOT, SLOT_ROOT, KEYED_INDEX_0 */)
    return n0
  }, { _: 8 /* NON_STABLE */ }), true)
  return n17
}"
`;

exports[`compiler: transition > v-show + appear 1`] = `
"import { VaporTransition as _VaporTransition, applyVShow as _applyVShow, createComponent as _createComponent, template as _template } from 'vue';
const t0 = _template("<h1>foo", 1)

export function render(_ctx) {
  const n1 = _createComponent(_VaporTransition, {
    appear: "",
    persisted: ""
  }, () => {
    const n0 = t0()
    _applyVShow(n0, () => (_ctx.show))
    return n0
  }, true)
  return n1
}"
`;

exports[`compiler: transition > work with dynamic keyed children 1`] = `
"import { VaporTransition as _VaporTransition, createKeyedFragment as _createKeyedFragment, createComponent as _createComponent, template as _template } from 'vue';
const t0 = _template("<h1>foo", 3)

export function render(_ctx) {
  const n2 = _createComponent(_VaporTransition, null, () => {
    const n0 = _createKeyedFragment(() => (_ctx.key), () => {
      const n1 = t0()
      return n1
    })
    return n0
  }, true)
  return n2
}"
`;

exports[`compiler: transition > work with v-if 1`] = `
"import { VaporTransition as _VaporTransition, createIf as _createIf, extend as _extend, createComponent as _createComponent, template as _template } from 'vue';
const t0 = _template("<h1>foo", 3)

export function render(_ctx) {
  const n3 = _createComponent(_VaporTransition, null, _extend(() => {
    const n0 = _createIf(() => (_ctx.show), () => {
      const n2 = t0()
      return n2
    }, null, 129 /* TRUE_SINGLE_ROOT, SLOT_ROOT */)
    return n0
  }, { _: 8 /* NON_STABLE */ }), true)
  return n3
}"
`;
